# qr-code-redirection-attack

./: README.md  pyproject.toml
qr/: generate_qr.py
